--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <meta name="yandex-verification" content="fba1b84bf9566297" />
 <meta content='lhgx46xa46khd7cddjxyokrdhz3mi5' name='facebook-domain-verification'/>
 <meta content='3c25bc9315b2d21dbfab199119079121' name='p:domain_verify'/>
+	<meta name="yandex-verification" content="159efbd0f4f30295" />
     <link href='https://pro.fontawesome.com/releases/v5.15.0/css/all.css' rel='stylesheet' type='text/css'/>
     <link href='https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap' rel='stylesheet'/>
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
