--- a/index.html
+++ b/index.html
@@ -2,25 +2,25 @@
 <html lang='en'>
 <head>
 <title>Score808 Live Stream Schedule | Jalalive Indonesia</title>
+<script type='text/javascript'> window.location.href="https://idn20.score808.eu.org/"; </script>
 	<meta content='width=device-width, initial-scale=1' name='viewport'/>
     <meta content='#212121' name='theme-color'/>
     <meta content='#212121' name='msapplication-navbutton-color'/>
     <link href='https://cdn.jsdelivr.net/gh/kebutuhanpublik/kebutuhanpublik.github.io@main/favicon.ico' rel='icon' type='image/x-icon'/>
-    <meta content='idn20 Score808 - Live Streaming Schedule and Football Match Results, Latest News from Indonesian, European and International Leagues.' name='description'/>
+    <meta content='idn20 Score808 - Indonesia Live Score Stream Schedule and Football Match Results, Latest News from Indonesian, European and International Leagues.' name='description'/>
     <meta content='Score808 Live Stream Schedule | Jalalive Indonesia' property='og:title'/>
     <link href='https://idn20.score808.eu.org/' rel='canonical'/>
     <meta content='https://idn20.score808.eu.org/' property='og:url'/>
-    <meta content='idn20 Score808 - Live Score Streaming Schedule and Football Match Results, Latest News from Indonesian, European and International Leagues.' name='og:description'/>
+    <meta content='idn20 Score808 - Indonesia Live Score Stream Schedule and Football Match Results, Latest News from Indonesian, European and International Leagues.' name='og:description'/>
     <meta rel='preload' content='https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiUIo1zWVJEpFrPpyy5rqH522v1F4FjGTTkFcX5h2BwMBQ1P7szB3YxrwoUCcUvmJKjnJl_xulFSNs-SBzSYcpoM3d-EohjORzZZpt91NIFRK21R6Tc-fp-0q_prLauW3Rd3pInbO8j3Ug7EzVyHsFEfOfcfOxOgm6FwBFd27FEJnQUSv1ndEVLjnCayg/s1600/score808indonesia.png' property='og:image'/>
-    <meta content='score808' property='profile:username'/>
+    <meta content='Score808' property='profile:username'/>
     <meta content='summary' name='twitter:card'/>
     <meta content='@Livescore808' name='twitter:title'/>
     <meta rel='preload' content='https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiUIo1zWVJEpFrPpyy5rqH522v1F4FjGTTkFcX5h2BwMBQ1P7szB3YxrwoUCcUvmJKjnJl_xulFSNs-SBzSYcpoM3d-EohjORzZZpt91NIFRK21R6Tc-fp-0q_prLauW3Rd3pInbO8j3Ug7EzVyHsFEfOfcfOxOgm6FwBFd27FEJnQUSv1ndEVLjnCayg/s1600/score808indonesia.png' property='twitter:image'/>
     <meta content='https://idn20.score808.eu.org/' name='twitter:url'/>
-<meta name="yandex-verification" content="fba1b84bf9566297" />
-<meta content='lhgx46xa46khd7cddjxyokrdhz3mi5' name='facebook-domain-verification'/>
+<meta name="yandex-verification" content="25fb4855abf45d78" />
+	<meta content='lhgx46xa46khd7cddjxyokrdhz3mi5' name='facebook-domain-verification'/>
 <meta content='3c25bc9315b2d21dbfab199119079121' name='p:domain_verify'/>
-	<meta name="yandex-verification" content="159efbd0f4f30295" />
     <link href='https://pro.fontawesome.com/releases/v5.15.0/css/all.css' rel='stylesheet' type='text/css'/>
     <link href='https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap' rel='stylesheet'/>
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
@@ -54,7 +54,7 @@ a:link,a:visited,.widget_bottom h1,.widget_bottom .caption{color:#ffffff}.bg-ria
 	</div>
 <div class="widget-flex">
 <h1 class="title">Score808 Live idn20<svg style='margin-bottom:-2px' fill="none" height="16" viewBox="0 0 16 16" width="16"><path clip-rule="evenodd" d="M8 0L9.99182 1.3121L12.3696 1.29622L13.3431 3.48797L15.3519 4.77336L14.9979 7.14888L16 9.32743L14.431 11.1325L14.1082 13.5126L11.8223 14.1741L10.277 16L8 15.308L5.72296 16L4.17772 14.1741L1.89183 13.5126L1.569 11.1325L0 9.32743L1.00206 7.14888L0.648112 4.77336L2.65693 3.48797L3.6304 1.29622L6.00818 1.3121L8 0Z" fill="#0095F6" fill-rule="evenodd"></path><path clip-rule="evenodd" d="M10.4036 5.20536L7.18853 8.61884L6.12875 7.49364C5.8814 7.23102 5.46798 7.21864 5.20536 7.466C4.94274 7.71335 4.93036 8.12677 5.17771 8.38939L6.71301 10.0195C6.9709 10.2933 7.40616 10.2933 7.66405 10.0195L11.3546 6.10111C11.6019 5.83848 11.5896 5.42507 11.3269 5.17771C11.0643 4.93036 10.6509 4.94274 10.4036 5.20536Z" fill="white" fill-rule="evenodd"></path></svg></h1>
-<h2 class="caption">idn20 Score808 - Live Score Streaming Football and Basketball Livescore</h2>
+<h2 class="caption">idn20 Score808 - Live Score Stream Football and Basketball Matches</h2>
 	</div>
 </div>
 </div><div class="widget LinkList">
@@ -73,11 +73,11 @@ a:link,a:visited,.widget_bottom h1,.widget_bottom .caption{color:#ffffff}.bg-ria
 <div class="bioLink">
 <div class="bioLink-item">
 <div class="bioLink-shadow"></div>
-<a href="https://www.score808.my.id/live" rel="nofollow noopener noreferrer" target="_blank" title="liveskor score808"><span class="bioLink-text">Live Stream Score808</span></a>
+<a href="https://skor.candil.eu.org/" rel="nofollow noopener noreferrer" target="_blank" title="liveskor score808"><span class="bioLink-text">Live Stream Score808</span></a>
 </div>
 <div class="bioLink-item">
 <div class="bioLink-shadow"></div>
-<a href="https://www.score808.my.id/live" rel="nofollow noopener noreferrer" target="_blank" title="score 808 live"><span class="bioLink-text">Score808 Live Today</span></a>
+<a href="https://skor.candil.eu.org/" rel="nofollow noopener noreferrer" target="_blank" title="score 808 live"><span class="bioLink-text">Score808 Live Today</span></a>
 </div>
 <div class="bioLink-item">
 <div class="bioLink-shadow"></div>
@@ -89,7 +89,7 @@ a:link,a:visited,.widget_bottom h1,.widget_bottom .caption{color:#ffffff}.bg-ria
 </div>
 </div>
 </div>
- <iframe id='score808frame' scrolling='no' src='https://score808pro.candil.eu.org/p/berita-nasional.html' style='width: 100%; border: none;'></iframe>
+ <iframe id='score808frame' scrolling='no' src='https://official.score808.my.id/p/match.html' style='width: 100%; border: none;'></iframe>
 <br/>
 </div>
 		<div class='logo-footer'>
@@ -100,7 +100,7 @@ a:link,a:visited,.widget_bottom h1,.widget_bottom .caption{color:#ffffff}.bg-ria
 	</div>
 	<script>//<![CDATA[ 
 window.addEventListener("message", function(e) {
-    if (e.origin !== "https://score808pro.candil.eu.org") return;
+    if (e.origin !== "https://official.score808.my.id") return;
     const iframe = document.getElementById("score808frame");
     if (e.data && e.data.height) {
       iframe.style.height = e.data.height + "px";
