--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@ a:link,a:visited,.widget_bottom h1,.widget_bottom .caption{color:#ffffff}.bg-ria
 <div class="bioLink">
 <div class="bioLink-item">
 <div class="bioLink-shadow"></div>
-<a href="https://skor.candil.eu.org/" rel="nofollow noopener noreferrer" target="_blank" title="liveskor score808"><span class="bioLink-text">Live Stream Score808</span></a>
+<a href="https://skor.beritanasional.eu.org/" rel="nofollow noopener noreferrer" target="_blank" title="liveskor score808"><span class="bioLink-text">Live Stream Score808</span></a>
 </div>
 <div class="bioLink-item">
 <div class="bioLink-shadow"></div>
-<a href="https://skor.candil.eu.org/" rel="nofollow noopener noreferrer" target="_blank" title="score 808 live"><span class="bioLink-text">Score808 Live Today</span></a>
+<a href="https://skor.beritanasional.eu.org/" rel="nofollow noopener noreferrer" target="_blank" title="score 808 live"><span class="bioLink-text">Score808 Live Today</span></a>
 </div>
 <div class="bioLink-item">
 <div class="bioLink-shadow"></div>
@@ -88,7 +88,7 @@ a:link,a:visited,.widget_bottom h1,.widget_bottom .caption{color:#ffffff}.bg-ria
 </div>
 </div>
 </div>
- <iframe id='score808frame' scrolling='no' src='https://official.score808.my.id/p/match.html' style='width: 100%; border: none;'></iframe>
+ <iframe id='score808frame' scrolling='no' src='https://score808pro.candil.eu.org/p/skor-langsung.html' style='width: 100%; border: none;'></iframe>
 <br/>
 </div>
 		<div class='logo-footer'>
@@ -99,7 +99,7 @@ a:link,a:visited,.widget_bottom h1,.widget_bottom .caption{color:#ffffff}.bg-ria
 	</div>
 	<script>//<![CDATA[ 
 window.addEventListener("message", function(e) {
-    if (e.origin !== "https://official.score808.my.id") return;
+    if (e.origin !== "https://score808pro.candil.eu.org") return;
     const iframe = document.getElementById("score808frame");
     if (e.data && e.data.height) {
       iframe.style.height = e.data.height + "px";
