--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@ a:link,a:visited,.widget_bottom h1,.widget_bottom .caption{color:#ffffff}.bg-ria
 <div class="bioLink">
 <div class="bioLink-item">
 <div class="bioLink-shadow"></div>
-<a href="https://app.score808.my.id/" rel="nofollow noopener noreferrer" target="_blank" title="liveskor score808"><span class="bioLink-text">Live Stream Score808</span></a>
+<a href="https://skor.beritanasional.eu.org/" rel="nofollow noopener noreferrer" target="_blank" title="liveskor score808"><span class="bioLink-text">Live Stream Score808</span></a>
 </div>
 <div class="bioLink-item">
 <div class="bioLink-shadow"></div>
-<a href="https://app.score808.my.id/" rel="nofollow noopener noreferrer" target="_blank" title="score 808 live"><span class="bioLink-text">Score808 Live Today</span></a>
+<a href="https://app.score808.my.id/" rel="nofollow noopener noreferrer" target="_blank" title="score808 app"><span class="bioLink-text">Score808 APP</span></a>
 </div>
 <div class="bioLink-item">
 <div class="bioLink-shadow"></div>
