--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang='en'>
 <head>
-<title>Score808 Live: Streaming Schedule | Score808pro</title>
+<title>Score808 Live Stream Schedule | Jalalive Indonesia</title>
 	<meta content='width=device-width, initial-scale=1' name='viewport'/>
     <meta content='#212121' name='theme-color'/>
     <meta content='#212121' name='msapplication-navbutton-color'/>
-    <link href='https://cdn.jsdelivr.net/gh/kebutuhanpublik/kebutuhanpublik.github.io@main/favicon.ico' rel='icon' type='image/x-icon'/>
+    <link href='https://cdn.jsdelivr.net/gh/score808pages/app@main/favicon.ico' rel='icon' type='image/x-icon'/>
     <meta content='idn20 Score808 - Indonesia Live Score Stream Schedule and Football Match Results, Latest News from Indonesian, European and International Leagues.' name='description'/>
     <meta content='Score808 Live Stream Schedule | Jalalive Indonesia' property='og:title'/>
     <link href='https://idn20.score808.eu.org/' rel='canonical'/>
